add : style modal / menu

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,3 +1,11 @@
 @import "~bootstrap";
 
-@import "components/test";
+@import "variables";
+
+
+@import "components/btn";
+
+
+@import "layout/modal";
+@import "layout/nav";
+@import "layout/search-bar";
